<resources>
    <string name="app_name">docDigitales</string>
    <string name="email_title">Correo electrónico:</string>
    <string name="password_title">Password:</string>
    <string name="fullname_title">Nombre Completo:</string>
    <string name="rfc_title">R.F.C.:</string>
    <string name="enterpriseName_title">Nombre de la empresa:</string>
    <string name="confirmPasword_title">Confirmación de Password:</string>
    <string name="branchName_title">Nombre de la sucursal:</string>
    <string name="streetName_title">Nombre de la calle:</string>
    <string name="colonytName_title">Nombre de la colonia:</string>
    <string name="exteriorNumber_title">Numerior exterior:</string>
    <string name="postalcode_title">Codigo posta:</string>
    <string name="city_title">Ciudad:</string>
    <string name="country_title">País:</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="signup_button">Registrarse</string>
    <string name="save_button">Guardar</string>
    <string name="error_emptyField">Los campos en rojo son requeridos</string>
    <string name="error_emailFormat">Formato de correo electrónico inválido</string>
    <string name="error_RFCSize">El R.F.C. no está completo</string>
    <string name="error_PasswordMissmatch">El Password no coincide</string>
    <string name="error_emailExist">Ya existe un usuario con este correo electrónico</string>
    <string name="error_wrongLogin">Las credenciales son erroneas</string>
    <string name="filter_LettersAndSpace">abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ áéíóúÁÉÍÓÚüÜ</string>
    <string name="filter_RFC">ABCDEFGHIJKLMNÑOPQRSTUVWXYZ0123456789</string>
    <string name="filter_Numbers">0123456789</string>
    <string name="message_registerSucced">Se ha registrado con éxito</string>
    <string name="message_branchSucced">Se ha añadido la succursal con éxito</string>
    <string name="message_branchSaved">Se han guardado los cambios a la succursal</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_registerBranch">Registrar Sucursal</string>
    <string name="menu_registerEmployee">Registrar Empleado</string>
    <string name="menu_sessionClose">Cerrar Sesión</string>
    <string name="title_activity_management">ManagementActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
