<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_registerBranch"
            android:icon="@drawable/ic_building"
            android:title="@string/menu_registerBranch" />
        <item
            android:id="@+id/nav_registerEmployee"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_registerEmployee" />
        <item
            android:id="@+id/nav_sessionClose"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_sessionClose" />
    </group>

</menu>
